--- a/css/aboutuss.css
+++ b/css/aboutuss.css
@@ -10,53 +10,152 @@ body{
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     background: rgb(0,0,0);
 background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(27,36,41,1) 50%, rgba(22,60,56,1) 100%);
+
 }
+
 
 /* HEADER INDEX*/
+main{
+    overflow: hidden;
+}
 
-.gridContainer{
-    padding: 4px;
-    height: 80px;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 4rem;
-    align-items: center;
+.header {
     background-color: #183247;
+    height: 80px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99999;
 }
-.menu ul{
-    list-style: none;
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    max-width: 992px;
+    margin: 0 auto;
 }
-.menu li{
-    display: inline-block;
-    padding: 0 1rem;
-    position: relative;
-    top: 20px;
-}
-.menu a{
+
+.nav-link {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.857);
-    font-size: 1.5rem;
-    font-weight: 600;
+    color: white;
 }
-.logo img{
-    width: 250px;
-    height: 74px;
-    position: relative;
-    top: 14.7px;
+
+.logo img {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 40px;
+    line-height: 80px;
+    height: 65px;
+    width: 300px;
 }
+
+
+.nav-menu {
+    display: flex;
+    margin-right: 40px;
+    list-style: none;
+
+}
+
+.nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 80px;
+    text-transform: uppercase;
+    width: max-content;
+}
+
+.nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 3px;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active {
+    transition: 0.5s;
+}
+
+/* TOGGLE */
+.nav-toggle {
+    color: white;
+    background: none;
+    border: none;
+    font-size: 30px;
+    padding: 0 20px;
+    line-height: 60px;
+    cursor: pointer;
+    display: none;
+}
+/* MOBILE */
+@media (max-width: 768px) {
+ 
+
+    .header {
+        height: 80px;
+        z-index: 99999;
+    }
+
+    .logo img {
+        font-size: 10px;
+        font-weight: bold;
+        padding: 0 20px;
+        line-height: 80px;
+        height: 65px;
+        width: 200px;
+    }
+    
+
+    .nav-menu {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        background-color: #2c3e50;
+        position: fixed;
+        top: 60px;
+        width: 100%;
+        padding: 20px 0;
+
+        height: calc(100% - 60px);
+        overflow-y: auto;
+
+        left: 100%;
+        transition: left 0.3s;
+    }
+
+    .nav-menu-item {
+        line-height: 70px;
+    }
+
+    .nav-menu-link:hover,
+    .nav-menu-link_active {
+        background: none;
+        color: #83c5f7;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+    .nav-menu_visible {
+        left: 0;
+    }
+
+    .nav-toggle:focus:not(:focus-visible) {
+        outline: none;
+    }
+}
+
 /*SECTION 1*/
-.containerAbout{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 10rem auto auto auto 1fr;
-    grid-template-areas: 
-        "h3 h3"
-        "imagen1 texto1"
-        "texto2 imagen2" 
-    ;
-}
+
 .aboutUs{
-    height: 2000px;
+    height: 1800px;
+}
+.aboutUsA{
+    color: white;
+    font-size: 3rem;
+    margin-top: 5%;
+    margin-bottom: -10%;
 }
 .imagenAbout{
     background-color: rgb(0, 0, 0);
@@ -82,167 +181,520 @@ background: radial-gradient(circle, rgba(0,0,0,1) 0%, rgba(27,36,41,1) 50%, rgba
     bottom: 30rem;
     border-radius: 5%;
 }
-.aboutUsA{
-    
-    grid-area: h3;
-    
+.containerAbout{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
 }
-.aboutUsA h3{
-    font-size: 4rem;
-    
-    color: rgba(255, 255, 255, 0.83);
-    position: relative;
-    left: 500px;
-    top: 7rem;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+.contenedoresa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 20rem;
+    gap: 1rem;
+}
 
-}
-.imagen1{
-    grid-area: imagen1;
-    border: solid 2px rgba(255, 255, 255, 0.693);
-    position: relative;
-    top: 100px;
-    left: 140px;
-    width: 500px;
-    border-radius: 7px;
-}
+
+
 .imagen1 img{
-    height: 600px;
-    width: 496px;
-    border-radius: 6px;
+    width: 100%;
+    height: 50rem;
+    border: 2px solid rgb(112, 112, 112);
+    border-radius: 4px;
+}
 
-}
+
 .texto1{
-    grid-area: texto1;
-    border: solid 5px rgba(44, 80, 114, 0.796);
-    height: 600px;
-    width: 500px;
-    font-size: 2.5rem;
-    color: rgba(255, 255, 255, 0.898);
-    border-radius: 7px;
-    position: relative;
-    left: 20px;
-    top: 100px;
-    line-height: 1.3;
+    width: 40%;
+    padding: 5rem;
+    height: 50rem;
+    font-size: 1.7rem;
+    border: 2px solid rgb(112, 112, 112);
+    color: white;
+    border-radius: 4px;
 }
-.texto1 p{
-    padding: 2.6rem;
-}
-.imagen2{
-    grid-area: imagen2;
-    border: solid 3px rgba(255, 255, 255, 0.693);
-    position: relative;
-    left: 20px;
-    top: 160px;
-    width: 500px;
-    border-radius: 6px;
-}
+
 .imagen2 img{
-    height: 600px;
-    width: 495px;
-    border-radius: 10px;
+    width: 100%;
+    height: 50rem;
+    border: 2px solid rgba(118, 114, 114, 0.693);
+    border-radius: 4px;
 }
+
+
 .texto2{
-    grid-area: texto2;
-    border: solid 5px rgba(44, 80, 114, 0.796);
-    height: 600px;
-    width: 500px;
-    font-size: 2.3rem;
-    color: rgba(255, 255, 255, 0.898);
-    border-radius: 7px;
-    position: relative;
-    left: 140px;
-    line-height: 1.3;
-    top: 160px;
+    width:40%;
+    height: 50rem;
+    padding: 4rem;
+    font-size: 1.7rem;
+    border: 2px solid rgb(112, 112, 112);
+    border-radius: 4px;
+    color: white;
 }
-.texto2 p{
-    padding: 2.6rem;
-}
+
 
 /* FOOTER */
-.footer{
+.footer {
     background-color: rgb(0, 0, 0);
-    display: grid;
-    font-size: 1.4rem;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr auto auto auto auto;
-    grid-template-areas: 
-        "home . ."
-        "travel . ."
-        "about . ."
-        "contact . ."
-        "helpp  parrafo ."
-    ;
+    height: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.6rem;
+    flex-wrap: wrap;
+    text-align: center;
 }
-.pf{
-    grid-area: parrafo;
+
+.pf {
+    grid-area: startt;
 }
-.pf p{
+.home {
+    grid-area: paginas;
+}
+
+.home p{
+    color: rgb(255, 255, 255);
+}
+
+
+
+.pf p {
     color: rgb(255, 255, 255);
     text-align: center;
     font-size: 1.3rem;
+    position: relative;
+    padding-top: 2rem;
 }
-.pHome{
-    grid-area: home;
-    color: rgb(255, 255, 255);
-}
-.pTravel{
-    grid-area: travel;
-    color: rgb(255, 255, 255);
-}
-.pAbout{
-    grid-area: about;
-    color: rgb(255, 255, 255);
-}
-.pContact{
-    grid-area: contact;
-    color: rgb(255, 255, 255);
-}
-.pHelp{
-    grid-area: helpp;
-    color: rgb(255, 255, 255);
-}
-
 /* MEDIA QUIRES ABOUT US*/
 
+@media(max-width: 868px){
+
+    /*SECTION 1*/
+    
+    .aboutUs{
+        height: 1800px;
+    }
+    .aboutUsA{
+        color: white;
+        font-size: 3rem;
+        margin-top: 5%;
+        margin-bottom: -10%;
+        margin-left: 25%;
+    }
+    .imagenAbout{
+        background-color: rgb(0, 0, 0);
+    }
+    
+    .imagenAbout img{
+        opacity: 0.9;
+        position: relative;
+        width: 80%;
+        height: 500px;
+        left: 16rem;
+    }
+    .imagenAbout p{
+        font-style: italic;
+        font-size: 3rem;
+        font-weight: 600;
+        color: rgba(255, 255, 255, 0.919);
+        background-color: rgba(26, 26, 26, 0.583);
+        position: absolute;
+        text-align: center;
+        left: 40%;
+        padding: 2rem;
+        bottom: 30rem;
+        border-radius: 5%;
+    }
+    .containerAbout{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+    .contenedoresa{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+        
+        gap: 1rem;
+    }
+    
+    
+    
+    .imagen1 img{
+        width: 100%;
+        height: 50rem;
+        border: 2px solid rgb(112, 112, 112);
+        border-radius: 4px;
+        
+    }
+    .imagen1{
+        position: relative;
+        right: 35%;
+    }
+    
+    
+    .texto1{
+        width: 80%;
+        padding: 5rem;
+        height: 50rem;
+        font-size: 1.7rem;
+        border: 2px solid rgb(112, 112, 112);
+        color: white;
+        border-radius: 4px;
+        position: relative;
+        left: 50%;
+        top: -513px;
+    }
+    
+    .imagen2 img{
+        width: 100%;
+        height: 50rem;
+        border: 2px solid rgba(118, 114, 114, 0.693);
+        border-radius: 4px;
+        position: relative;
+        left: 63%;
+        top: -513px;
+    }
+    
+    
+    .texto2{
+        width: 80%;
+        padding: 4rem;
+        height: 50rem;
+        font-size: 1.7rem;
+        border: 2px solid rgb(112, 112, 112);
+        border-radius: 4px;
+        color: white;
+        position: relative;
+        left: -35%;
+        top: -1024px;
+    }
+    
+    
+    /* FOOTER */
+    .footer {
+        background-color: rgb(0, 0, 0);
+        height: 130px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        font-size: 1.6rem;
+        flex-wrap: wrap;
+        text-align: center;
+    }
+    
+    .pf {
+        grid-area: startt;
+    }
+    .home {
+        grid-area: paginas;
+    }
+    
+    .home p{
+        color: rgb(255, 255, 255);
+    }
+    
+    
+    
+    .pf p {
+        color: rgb(255, 255, 255);
+        text-align: center;
+        font-size: 1.3rem;
+        position: relative;
+        padding-top: 2rem;
+    }
+    }
+@media(max-width: 634px){
+
+        /*SECTION 1*/
+        
+        .aboutUs{
+            height: 1800px;
+        }
+        .aboutUsA{
+            color: white;
+            font-size: 3rem;
+            margin-top: 5%;
+            margin-bottom: -10%;
+            margin-left: 25%;
+        }
+        .imagenAbout{
+            background-color: rgb(0, 0, 0);
+        }
+        
+        .imagenAbout img{
+            opacity: 0.9;
+            position: relative;
+            width: 100%;
+            height: 500px;
+            left: 16rem;
+        }
+        .imagenAbout p{
+            font-style: italic;
+            font-size: 3rem;
+            font-weight: 600;
+            color: rgba(255, 255, 255, 0.919);
+            background-color: rgba(26, 26, 26, 0.583);
+            position: absolute;
+            text-align: center;
+            left: 40%;
+            padding: 2rem;
+            bottom: 30rem;
+            border-radius: 5%;
+        }
+        .containerAbout{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            flex-wrap: wrap;
+        }
+        .contenedoresa{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+            gap: 1rem;
+        }
+        
+        
+        
+        .imagen1 img{
+            width: 100%;
+            height: 50rem;
+            border: 2px solid rgb(112, 112, 112);
+            border-radius: 4px;
+        }
+        
+        
+        .texto1{
+            width: 100%;
+            padding: 4.5rem;
+            height: 50rem;
+            font-size: 1.2rem;
+            border: 2px solid rgb(112, 112, 112);
+            color: white;
+            border-radius: 4px;
+            position: relative;
+            left: 88%;
+            top: -513px;
+        }
+        
+        .imagen2 img{
+            width: 100%;
+            height: 50rem;
+            border: 2px solid rgba(118, 114, 114, 0.693);
+            border-radius: 4px;
+            position: relative;
+            left: 88%;
+            top: -513px;
+        }
+        
+        
+        .texto2{
+            width: 100%;
+            height: 50rem;
+            font-size: 1.2rem;
+            border: 2px solid rgb(112, 112, 112);
+            border-radius: 4px;
+            color: white;
+            position: relative;
+            left: -35%;
+            top: -1024px;
+        }
+        
+        
+        /* FOOTER */
+        .footer {
+            background-color: rgb(0, 0, 0);
+            height: 130px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-size: 1.6rem;
+            flex-wrap: wrap;
+            text-align: center;
+        }
+        
+        .pf {
+            grid-area: startt;
+        }
+        .home {
+            grid-area: paginas;
+        }
+        
+        .home p{
+            color: rgb(255, 255, 255);
+        }
+        
+        
+        
+        .pf p {
+            color: rgb(255, 255, 255);
+            text-align: center;
+            font-size: 1.3rem;
+            position: relative;
+            padding-top: 2rem;
+        }
+    }
+    @media(max-width: 480px){
+
+        /*SECTION 1*/
+        
+        .aboutUs{
+            height: 1800px;
+        }
+        .aboutUsA{
+            color: white;
+            font-size: 3rem;
+            margin-top: 5%;
+            margin-bottom: -10%;
+            margin-left: 25%;
+        }
+        .imagenAbout{
+            background-color: rgb(0, 0, 0);
+        }
+        
+        .imagenAbout img{
+            opacity: 0.9;
+            position: relative;
+            width: 100%;
+            height: 500px;
+            left: 16rem;
+        }
+        .imagenAbout p{
+            font-style: italic;
+            font-size: 3rem;
+            font-weight: 600;
+            color: rgba(255, 255, 255, 0.919);
+            background-color: rgba(26, 26, 26, 0.583);
+            position: absolute;
+            text-align: center;
+            left: 40%;
+            padding: 2rem;
+            bottom: 30rem;
+            border-radius: 5%;
+        }
+        .containerAbout{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            flex-wrap: wrap;
+        }
+        .contenedoresa{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100%;
+            gap: 1rem;
+        }
+        
+        
+        
+        .imagen1 img{
+            width: 300%;
+            height: 50rem;
+            border: 2px solid rgb(112, 112, 112);
+            border-radius: 4px;
+            margin-left: -150%;
+        }
+        
+        
+        .texto1{
+            width: 100%;
+            padding: 0rem;
+            height: 50rem;
+            font-size: 1.2rem;
+            border: 2px solid rgb(112, 112, 112);
+            color: white;
+            border-radius: 4px;
+            position: relative;
+            left: 308%;
+            top: -513px;
+        }
+        .texto1 p{
+            width: 180%;
+        }
+        
+        .imagen2 img{
+            width: 100%;
+            height: 50rem;
+            border: 2px solid rgba(118, 114, 114, 0.693);
+            border-radius: 4px;
+            position: relative;
+            left: 88%;
+            top: -513px;
+        }
+        
+        
+        .texto2{
+            width: 100%;
+            height: 50rem;
+            font-size: 1.2rem;
+            border: 2px solid rgb(112, 112, 112);
+            border-radius: 4px;
+            color: white;
+            position: relative;
+            left: -35%;
+            top: -1024px;
+        }
+        
+        
+        /* FOOTER */
+        .footer {
+            background-color: rgb(0, 0, 0);
+            height: 130px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            font-size: 1.6rem;
+            flex-wrap: wrap;
+            text-align: center;
+        }
+        
+        .pf {
+            grid-area: startt;
+        }
+        .home {
+            grid-area: paginas;
+        }
+        
+        .home p{
+            color: rgb(255, 255, 255);
+        }
+        
+        
+        
+        .pf p {
+            color: rgb(255, 255, 255);
+            text-align: center;
+            font-size: 1.3rem;
+            position: relative;
+            padding-top: 2rem;
+        }
+    }
 @media(max-width: 320px){
 
-    .gridContainer{
-        height: 140px;
-        padding: 4px;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 4rem auto;
-        grid-template-areas: 
-            "logo"
-            "nav"
-        ;
-        align-items: center;
-        justify-items: center;
-        background-color: #391847;
-    }
-    .logo{
-        grid-area: logo;
-    }
-    .menu{
-        grid-area: nav;
-    }
-    .menu ul{
-        list-style: none;
-    }
-    .menu li{
-        display: inline-block;
-        padding: 0 1rem;
-    }
-    .menu a{
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-        font-size: 1rem;
-        font-weight: 500;
-    }
-    .logo img{
-        width: 200px;
-    }
+
     /*SECTION 1*/
 .containerAbout{
     display: grid;
