--- a/css/contactt.css
+++ b/css/contactt.css
@@ -11,43 +11,143 @@ body{
 }
 
 /* HEADER INDEX*/
-
-.gridContainer{
-    padding: 4px;
-    height: 80px;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 4rem;
-    align-items: center;
+main{
+    overflow: hidden;
+}
+.header {
     background-color: #183247;
+    height: 80px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99999;
 }
-.menu ul{
-    list-style: none;
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+
+    max-width: 992px;
+    margin: 0 auto;
 }
-.menu li{
-    display: inline-block;
-    padding: 0 1rem;
-    position: relative;
-    top: 20px;
-}
-.menu a{
+
+.nav-link {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.857);
-    font-size: 1.5rem;
-    font-weight: 600;
+    color: white;
 }
-.logo img{
-    width: 250px;
-    height: 74px;
-    position: relative;
-    top: 14.7px;
+
+.logo img {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 40px;
+    line-height: 80px;
+    height: 75px;
+    width: 300px;
 }
+
+
+.nav-menu {
+    display: flex;
+    margin-right: 40px;
+    list-style: none;
+
+}
+
+.nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 80px;
+    text-transform: uppercase;
+    width: max-content;
+}
+
+.nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 3px;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active {
+    transition: 0.5s;
+}
+
+/* TOGGLE */
+.nav-toggle {
+    color: white;
+    background: none;
+    border: none;
+    font-size: 30px;
+    padding: 0 20px;
+    line-height: 60px;
+    cursor: pointer;
+
+    display: none;
+}
+/* MOBILE */
+@media (max-width: 768px) {
+    body {
+        padding-top: 70px;
+    }
+
+    .header {
+        height: 60px;
+        z-index: 99999;
+    }
+
+    .logo {
+        font-size: 25px;
+        padding: 0 20px;
+        line-height: 60px;
+    }
+
+    .nav-menu {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        background-color: #2c3e50;
+        position: fixed;
+        top: 60px;
+        width: 100%;
+        padding: 20px 0;
+
+        height: calc(100% - 60px);
+        overflow-y: auto;
+
+        left: 100%;
+        transition: left 0.3s;
+    }
+
+    .nav-menu-item {
+        line-height: 70px;
+    }
+
+    .nav-menu-link:hover,
+    .nav-menu-link_active {
+        background: none;
+        color: #83c5f7;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+    .nav-menu_visible {
+        left: 0;
+    }
+
+    .nav-toggle:focus:not(:focus-visible) {
+        outline: none;
+    }
+}
+
 /*SECTION 1*/
 .contactus{
     background-image: url(../imagenes/ricardo22.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 660px;
+    width: 100%;
 }
 .contact{
     text-align: center;
@@ -56,16 +156,16 @@ body{
     font-size: 3rem;
     /* border: solid 1px red; */
     position: relative;
-    top: 2rem;
+    top: 10rem;
     color: rgba(255, 252, 252, 0.96);
     padding: 3rem;
 }
 .datosH{
-    width: 360px;
-    height: 390px;
-    position: relative;
-    left: 36%;
-    top: 3rem;
+    width: 30%;
+    position:relative;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 3rem;
     border: solid 3px rgba(75, 70, 70, 0.604);
     background-color: rgba(0, 0, 0, 0.316);
@@ -74,7 +174,7 @@ body{
     font-size: 2.5rem;
     color: rgb(250, 250, 250);
     position: relative;
-    left: 6rem;
+    left:3rem;
     border-radius: 7px;
 }
 .boton{
@@ -102,152 +202,581 @@ input{
     width: 165px;
 }
 
-/* FOOTER */
-/* .footer{
+.footer {
     background-color: rgb(0, 0, 0);
+    height: 130px;
     display: grid;
     font-size: 1.4rem;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr auto auto auto auto;
-    grid-template-areas: 
-        "home . ."
-        "travel . ."
-        "about . ."
-        "contact . ."
-        "helpp  parrafo ."
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "paginas"
+        "startt"
     ;
+
 }
-.pf{
-    grid-area: parrafo;
+
+.pf {
+    grid-area: startt;
 }
-.pf p{
+.home {
+    grid-area: paginas;
+}
+
+.home p{
+    position: relative;
+    top: 20px;
+    left: 550px;
+    color: white;
+}
+
+
+
+.pf p {
     color: rgb(255, 255, 255);
     text-align: center;
     font-size: 1.3rem;
+    position: relative;
+    bottom: 0px;
+    left: 450px;
 }
-.pHome{
-    grid-area: home;
+
+
+
+@media(max-width: 868px){
+
+  
+
+/*SECTION 1*/
+
+.contactus{
+    background-image: url(../imagenes/ricardo22.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 660px;
+}
+.contact{
+    text-align: center;
+}
+
+.datosH{
+    transform: none;
+    width: 40%;
+    height: 330px;
+    position:relative;
+    top:30%;
+    left: 30%;
+    padding: 0rem;
+}
+.form-label{
+    font-size: 2.5rem;
+    color: rgb(250, 250, 250);
+    position: relative;
+    left: 3rem;
+    border-radius: 7px;
+}
+.boton{
+    position: relative;
+    bottom: 10px;
+    left: 6rem;
+}
+.pasando{
+    width: 100%;
+    overflow: hidden;
+}
+input{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+.form-control{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+
+/* FOOTER */
+.footer {
+    background-color: rgb(0, 0, 0);
+    height: 130px;
+    display: grid;
+    font-size: 1.4rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "paginas"
+        "startt"
+    ;
+
+}
+
+.pf {
+    grid-area: startt;
+}
+.home {
+    grid-area: paginas;
+}
+
+.home p{
+    position: relative;
+    top: 20px;
+    left: 350px;
+    color: white;
+}
+
+
+.pf p {
     color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1.3rem;
+    position: relative;
+    bottom: 0px;
+    left: 330px;
 }
-.pTravel{
-    grid-area: travel;
+
+}
+
+@media(max-width: 634px){
+
+    /* Menu INDEX*/
+.header {
+    height: 80px;
+    width: 100%;
+    z-index: 99999;
+}
+
+.logo {
+    font-size: 25px;
+    padding: 0 20px;
+    line-height: 60px;
+}
+
+.nav-menu {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    background-color: #2c3e50;
+    position: fixed;
+    top: 60px;
+    width: 100%;
+    padding: 20px 0;
+
+    height: calc(100% - 60px);
+    overflow-y: auto;
+
+    left: 100%;
+    transition: left 0.3s;
+}
+
+.nav-menu-item {
+    line-height: 70px;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active {
+    background: none;
+    color: #83c5f7;
+}
+
+.nav-toggle {
+    display: block;
+}
+
+.nav-menu_visible {
+    left: 0;
+}
+
+.nav-toggle:focus:not(:focus-visible) {
+    outline: none;
+}
+
+/*SECTION 1*/
+
+.contactus{
+    background-image: url(../imagenes/ricardo22.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 660px;
+}
+.contact{
+    text-align: center;
+}
+.datosH{
+    transform: none;
+    width: 50%;
+    height: 330px;
+    position:relative;
+    top:30%;
+    left: 30%;
+    padding: 0rem;
+}
+.form-label{
+    font-size: 2.5rem;
+    color: rgb(250, 250, 250);
+    position: relative;
+    left: 3rem;
+    border-radius: 7px;
+}
+.boton{
+    position: relative;
+    bottom: 10px;
+    left: 6rem;
+}
+.pasando{
+    width: 100%;
+    overflow: hidden;
+}
+input{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+    width: 165px;
+}
+.form-control{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+
+/* FOOTER */
+.footer {
+    background-color: rgb(0, 0, 0);
+    height: 130px;
+    display: grid;
+    font-size: 1.4rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "paginas"
+        "startt"
+    ;
+
+}
+
+.pf {
+    grid-area: startt;
+}
+.home {
+    grid-area: paginas;
+}
+
+.home p{
+    width: 120%;
+    position: relative;
+    top: 20px;
+    left: 210px;
+    color: white;
+}
+
+
+.pf p {
     color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1.3rem;
+    position: relative;
+    bottom: 0px;
+    left: 230px;
 }
-.pAbout{
-    grid-area: about;
+}
+@media(max-width: 480px){
+
+    /* Menu INDEX*/
+.header {
+    height: 80px;
+    width: 100%;
+    z-index: 99999;
+}
+
+.logo {
+    font-size: 25px;
+    padding: 0 20px;
+    line-height: 60px;
+}
+
+.nav-menu {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    background-color: #2c3e50;
+    position: fixed;
+    top: 60px;
+    width: 100%;
+    padding: 20px 0;
+
+    height: calc(100% - 60px);
+    overflow-y: auto;
+
+    left: 100%;
+    transition: left 0.3s;
+}
+
+.nav-menu-item {
+    line-height: 70px;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active {
+    background: none;
+    color: #83c5f7;
+}
+
+.nav-toggle {
+    display: block;
+}
+
+.nav-menu_visible {
+    left: 0;
+}
+
+.nav-toggle:focus:not(:focus-visible) {
+    outline: none;
+}
+
+/*SECTION 1*/
+
+.contactus{
+    background-image: url(../imagenes/ricardo22.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 660px;
+}
+.contact{
+    text-align: center;
+}
+.datosH{
+    transform: none;
+    width: 70%;
+    height: 330px;
+    position:relative;
+    top:30%;
+    left: 15%;
+    padding: 0rem;
+}
+.form-label{
+    font-size: 2.5rem;
+    color: rgb(250, 250, 250);
+    position: relative;
+    left: 3rem;
+    border-radius: 7px;
+}
+.boton{
+    position: relative;
+    bottom: 10px;
+    left: 6rem;
+}
+.pasando{
+    width: 100%;
+    overflow: hidden;
+}
+input{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+.form-control{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+
+/* FOOTER */
+.footer {
+    background-color: rgb(0, 0, 0);
+    height: 130px;
+    display: grid;
+    font-size: 1.4rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "paginas"
+        "startt"
+    ;
+
+}
+
+.pf {
+    grid-area: startt;
+    position: relative;
+    top: 0px;
+}
+.home {
+    grid-area: paginas;
+}
+
+.home p{
+    width: 100%;
+    position: relative;
+    top: 40px;
+    left: 210px;
+    color: white;
+}
+
+
+.pf p {
     color: rgb(255, 255, 255);
+    text-align: center;
+    font-size: 1.3rem;
+    position: relative;
+    bottom: 20px;
+    left: 20px;
 }
-.pContact{
-    grid-area: contact;
-    color: rgb(255, 255, 255);
 }
-.pHelp{
-    grid-area: helpp;
-    color: rgb(255, 255, 255);
-}
- */
+
 @media(max-width: 320px){
 
-    .gridContainer{
-        height: 140px;
-        padding: 4px;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 4rem auto;
-        grid-template-areas: 
-            "logo"
-            "nav"
-        ;
-        align-items: center;
-        justify-items: center;
-        background-color: #391847;
-    }
-    .logo{
-        grid-area: logo;
-    }
-    .menu{
-        grid-area: nav;
-    }
-    .menu ul{
-        list-style: none;
-    }
-    .menu li{
-        display: inline-block;
-        padding: 0 1rem;
-    }
-    .menu a{
-        text-decoration: none;
-        color: rgb(255, 255, 255);
-        font-size: 1rem;
-        font-weight: 500;
-    }
-    .logo img{
-        width: 200px;
-    }
-    /*SECTION 1*/
-    .contact{
-        text-align: center;
-    }
-    .contactTitulo h3{
-        font-size: 3rem;
-        /* border: solid 1px red; */
-        margin: 7rem;
-        color: white;
-        padding: 3rem;
-    }
-    .datosH {
-        width: 100px;
-    }
-    .form-label{
-        font-size: 1.3rem;
-        color: white;
-    }
-    .boton{
-        position: relative;
-        top: 2rem;
-    }
-    /* FOOTER */
-    .footer{
-        background-color: rgb(0, 0, 0);
-        display: grid;
-        font-size: 1.4rem;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr auto auto auto auto;
-        grid-template-areas: 
-            "home . ."
-            "travel . ."
-            "about . ."
-            "contact . ."
-            "helpp  parrafo ."
-        ;
-    }
-    .pf{
-        grid-area: parrafo;
-    }
-    .pf p{
-        color: rgb(255, 255, 255);
-        text-align: center;
-        font-size: 1.3rem;
-    }
-    .pHome{
-        grid-area: home;
-        color: rgb(255, 255, 255);
-    }
-    .pTravel{
-    grid-area: travel;
-    color: rgb(255, 255, 255);
-    }
-    .pAbout{
-        grid-area: about;
-        color: rgb(255, 255, 255);
-    }
-    .pContact{
-        grid-area: contact;
-        color: rgb(255, 255, 255);
-    }
-    .pHelp{
-        grid-area: helpp;
-        color: rgb(255, 255, 255);
-    }
+    /* Menu INDEX*/
+.header {
+    height: 80px;
+    width: 100%;
+    z-index: 99999;
+}
 
+.logo {
+    font-size: 25px;
+    padding: 0 20px;
+    line-height: 60px;
+    /* width: 70px; */
+    position: relative;
+    right: 50px;
+    width: 20%;
+}
+
+.nav-menu {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    background-color: #2c3e50;
+    position: fixed;
+    top: 60px;
+    /* width: 100%; */
+    padding: 20px 0;
+
+    height: calc(100% - 60px);
+    overflow-y: auto;
+
+    left: 100%;
+    transition: left 0.3s;
+}
+
+.nav-menu-item {
+    line-height: 70px;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active {
+    background: none;
+    color: #83c5f7;
+}
+
+.nav-toggle {
+    display: block;
+}
+
+.nav-menu_visible {
+    left: 0;
+}
+
+.nav-toggle:focus:not(:focus-visible) {
+    outline: none;
+}
+
+/*SECTION 1*/
+
+.contactus{
+    background-image: url(../imagenes/ricardo22.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 660px;
+}
+.contact{
+    text-align: center;
+}
+
+.datosH{
+    transform: none;
+    width: 90%;
+    height: 330px;
+    position:relative;
+    top:30%;
+    left: 5%;
+    padding: 0rem;
+}
+.form-label{
+    font-size: 2.5rem;
+    color: rgb(250, 250, 250);
+    position: relative;
+    left: 3rem;
+    border-radius: 7px;
+}
+.boton{
+    position: relative;
+    bottom: 10px;
+    left: 6rem;
+}
+.pasando{
+    width: 100%;
+    overflow: hidden;
+}
+input{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+.form-control{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+
+/* FOOTER */
+.footer {
+    background-color: rgb(0, 0, 0);
+    height: 130px;
+    display: grid;
+    font-size: 1.4rem;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-areas:
+        "paginas"
+        "startt"
+    ;
+
+}
+
+.pf {
+    grid-area: startt;
+    position: relative;
+    bottom: 20px;
+}
+.home {
+    grid-area: paginas;
+    
+}
+
+.home p{
+    width: 100%;
+    position: relative;
+    top: 50px;
+    left: 160px;
+    color: white;
+}
+
+
+.pf p {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    height: 90px;
+    font-size: 1rem;
+    position: relative;
+    bottom: 10px;
+    left: 30px;
+}
 }
