--- a/css/helpp.css
+++ b/css/helpp.css
@@ -8,41 +8,137 @@ html{
 }
 body{
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";  
-    background: rgb(57,24,71);
-    background: radial-gradient(circle, rgba(57,24,71,1) 0%, rgba(88,33,111,1) 50%, rgba(57,24,71,1) 100%); 
 }
 
 /* HEADER INDEX*/
-
-.gridContainer{
-    padding: 4px;
-    height: 80px;
-    display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-rows: 4rem;
-    align-items: center;
+main{
+    overflow: hidden;
+}
+.header {
     background-color: #183247;
+    height: 80px;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 99999;
 }
-.menu ul{
-    list-style: none;
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    max-width: 992px;
+    margin: 0 auto;
 }
-.menu li{
-    display: inline-block;
-    padding: 0 1rem;
-    position: relative;
-    top: 20px;
-}
-.menu a{
+
+.nav-link {
     text-decoration: none;
-    color: rgba(255, 255, 255, 0.857);
-    font-size: 1.5rem;
-    font-weight: 600;
+    color: white;
 }
-.logo img{
-    width: 250px;
-    height: 74px;
-    position: relative;
-    top: 14.7px;
+
+.logo img {
+    font-size: 30px;
+    font-weight: bold;
+    padding: 0 40px;
+    line-height: 80px;
+    height: 65px;
+    width: 300px;
+}
+
+
+.nav-menu {
+    display: flex;
+    margin-right: 40px;
+    list-style: none;
+
+}
+
+.nav-menu-item {
+    font-size: 18px;
+    margin: 0 10px;
+    line-height: 80px;
+    text-transform: uppercase;
+    width: max-content;
+}
+
+.nav-menu-link {
+    padding: 8px 12px;
+    border-radius: 3px;
+}
+
+.nav-menu-link:hover,
+.nav-menu-link_active {
+    transition: 0.5s;
+}
+
+/* TOGGLE */
+.nav-toggle {
+    color: white;
+    background: none;
+    border: none;
+    font-size: 30px;
+    padding: 0 20px;
+    line-height: 60px;
+    cursor: pointer;
+    display: none;
+}
+/* MOBILE */
+@media (max-width: 768px) {
+ 
+
+    .header {
+        height: 80px;
+        z-index: 99999;
+    }
+
+    .logo img {
+        font-size: 10px;
+        font-weight: bold;
+        padding: 0 20px;
+        line-height: 80px;
+        height: 65px;
+        width: 200px;
+    }
+    
+
+    .nav-menu {
+        flex-direction: column;
+        align-items: center;
+        margin: 0;
+        background-color: #2c3e50;
+        position: fixed;
+        top: 60px;
+        width: 100%;
+        padding: 20px 0;
+
+        height: calc(100% - 60px);
+        overflow-y: auto;
+
+        left: 100%;
+        transition: left 0.3s;
+    }
+
+    .nav-menu-item {
+        line-height: 70px;
+    }
+
+    .nav-menu-link:hover,
+    .nav-menu-link_active {
+        background: none;
+        color: #83c5f7;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+
+    .nav-menu_visible {
+        left: 0;
+    }
+
+    .nav-toggle:focus:not(:focus-visible) {
+        outline: none;
+    }
 }
 
 /*SECTION 1*/
@@ -65,23 +161,24 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     height: 660px;
+    width: 100%;
 }
 .datosH{
-    width: 360px;
-    height: 390px;
-    position: relative;
-    left: 36%;
-    top: 10rem;
+    width: 30%;
+    position:relative;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 3rem;
     border: solid 3px rgba(75, 70, 70, 0.604);
     background-color: rgba(0, 0, 0, 0.316);
 }
 .form-label{
     font-size: 2.5rem;
-    color: rgb(0, 0, 0);
+    color: rgb(250, 250, 250);
     position: relative;
-    left: 6rem;
-    border-radius: 7px;
+    left:3rem;
+    border-radius: 7px;;
 }
 .boton{
     position: relative;
@@ -104,45 +201,151 @@ input{
     width: 165px;
 }
 /* FOOTER */
-/* .footer{
+.footer {
     background-color: rgb(0, 0, 0);
-    display: grid;
-    font-size: 1.4rem;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr auto auto auto auto;
-    grid-template-areas: 
-        "home . ."
-        "travel . ."
-        "about . ."
-        "contact . ."
-        "helpp  parrafo ."
-    ;
+    height: 130px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 1.6rem;
+    flex-wrap: wrap;
+    text-align: center;
 }
-.pf{
-    grid-area: parrafo;
+
+.pf {
+    grid-area: startt;
 }
-.pf p{
+.home {
+    grid-area: paginas;
+}
+
+.home p{
+    color: rgb(255, 255, 255);
+}
+
+
+
+.pf p {
     color: rgb(255, 255, 255);
     text-align: center;
     font-size: 1.3rem;
+    position: relative;
+    padding-top: 2rem;
 }
-.pHome{
-    grid-area: home;
-    color: rgb(255, 255, 255);
+@media(max-width: 868px){
+
+
+/*SECTION 1*/
+
+.contactus{
+    background-image: url(../imagenes/ricardo22.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 660px;
 }
-.pTravel{
-    grid-area: travel;
-    color: rgb(255, 255, 255);
+.contact{
+    text-align: center;
 }
-.pAbout{
-    grid-area: about;
-    color: rgb(255, 255, 255);
+
+.datosH{
+    transform: none;
+    width: 40%;
+    height: 330px;
+    position:relative;
+    top:30%;
+    left: 30%;
+    padding: 0rem;
 }
-.pContact{
-    grid-area: contact;
-    color: rgb(255, 255, 255);
+.form-label{
+    font-size: 2.5rem;
+    color: rgb(250, 250, 250);
+    position: relative;
+    left: 3rem;
+    border-radius: 7px;
 }
-.pHelp{
-    grid-area: helpp;
-    color: rgb(255, 255, 255);
-} */
+.boton{
+    position: relative;
+    bottom: 10px;
+    left: 6rem;
+}
+.pasando{
+    width: 100%;
+    overflow: hidden;
+}
+input{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+.form-control{
+    position: relative;
+    left: 4rem;
+    margin: 1.9rem;
+    padding: 1rem;
+}
+
+}
+
+@media (max-width: 634px){
+    
+.datosH{
+    transform: none;
+    width: 50%;
+    height: 330px;
+    position:relative;
+    top:30%;
+    left: 30%;
+    padding: 0rem;
+}
+.form-label{
+    font-size: 2.5rem;
+    color: rgb(250, 250, 250);
+    position: relative;
+    left: 3rem;
+    border-radius: 7px;
+}
+}
+
+@media (max-width: 480px){
+
+    .datosH{
+        transform: none;
+        width: 70%;
+        height: 330px;
+        position:relative;
+        top:30%;
+        left: 15%;
+        padding: 0rem;
+    }
+    .form-label{
+        font-size: 2.5rem;
+        color: rgb(250, 250, 250);
+        position: relative;
+        left: 3rem;
+        border-radius: 7px;
+    }
+
+}
+
+@media (max-width: 320px){
+
+    .datosH{
+        transform: none;
+        width: 90%;
+        height: 300px;
+        position:relative;
+        top:30%;
+        left: 5%;
+        padding: 0rem;
+    }
+    .form-label{
+        font-size: 2.5rem;
+        color: rgb(250, 250, 250);
+        position: relative;
+        left: 3rem;
+        border-radius: 7px;
+    }
+
+}
